--- a/englishLearn.html
+++ b/englishLearn.html
@@ -8,7 +8,7 @@
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <style>
     body {
-      font-family: 'Comic Sans MS', cursive, sans-serif;
+      font-family: Arial, sans-serif;;
       background-color: #e0f7fa;
       display: flex;
       justify-content: center;
