--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="dropdown-content" id="myDropdown3">
                   <a href="https://guidephy.github.io/vrguanyin/">VR遊觀音</a>
                   <a href="https://guidephy.github.io/EnergyTransition/">Planet713計畫</a>
-                  <a href="https://guidephy.github.io/imagetotext/">影像擷取文字系統</a>
+                  <a href="https://guidephy.github.io/englishLearn">英文單字學習</a>
                   <a href="https://guidephy.github.io/111ceproject.html">碳捕捉暨Na循環發電IoT系統</a>
                    <a href="https://guidephy.github.io/grades.html">課堂計分</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
