--- a/englishLearn.html
+++ b/englishLearn.html
@@ -69,7 +69,7 @@
 <body>
 
 <div id="container">
-  <h2 id="guidephy-text">Guidephy</h2>
+  <h2 id="guidephy-text">仟弘的單字卡</h2>
   <div class="button-group">
     <button id="startButton" onclick="startLearning()">開始英文單字學習</button>
     <button id="addWordButton" onclick="showAddWordForm()">新增單字</button>
