--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
-        <li><a href="https://gimy.ai/vod/234682.html">台語電影賞析</a></li>
+        <li><a href="https://drive.google.com/drive/folders/1RRduYURgqoHuK9_1UsOFtuGupr4JPpk-XFcTvHvrau6_60mG44YJ3TmPxZtBUD6nHIQb1lrf?usp=sharing">204探究影片</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
