--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
-        <li><a href="https://drive.google.com/drive/folders/1RRduYURgqoHuK9_1UsOFtuGupr4JPpk-XFcTvHvrau6_60mG44YJ3TmPxZtBUD6nHIQb1lrf?usp=sharing">204探究影片</a></li>
+        <li><a href="https://www.canva.com/design/DAGJV7ZetD4/D_g0dPRnKh2dM1glVeqNwg/view?utm_content=DAGJV7ZetD4&utm_campaign=designshare&utm_medium=link&utm_source=editor">永續教案設計</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
