--- a/ff.html
+++ b/ff.html
@@ -6,141 +6,125 @@
     <title>土地開發遊戲</title>
     <style>
         body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            overflow: hidden; /* 防止滚动 */
+        }
 
-#main-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    max-width: 1200px;
-    padding: 20px;
-    box-sizing: border-box;
-    overflow: auto; /* 确保在屏幕较小时可以滚动查看 */
-}
+        #main-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            width: 100%;
+            height: 100%;
+            max-width: 1200px;
+            padding: 10px;
+            box-sizing: border-box;
+        }
 
-h1 {
-    color: #333;
-    font-size: 2rem;
-    margin: 20px 0;
-}
+        h1 {
+            color: #333;
+            font-size: 2.5vh;
+            margin: 0;
+            padding: 10px 0;
+        }
 
-#game-board {
-    display: grid;
-    grid-template-columns: repeat(11, minmax(20px, 8vw));
-    grid-template-rows: repeat(11, minmax(20px, 8vw));
-    gap: 1px;
-    margin: 20px auto;
-    background-color: #fff;
-    border: 2px solid #ccc;
-    width: fit-content;
-}
+        #game-board {
+            display: grid;
+            grid-template-columns: repeat(11, 1fr);
+            grid-template-rows: repeat(11, 1fr);
+            gap: 1px;
+            margin: 10px 0;
+            background-color: #fff;
+            border: 2px solid #ccc;
+            width: 80vmin;
+            height: 80vmin;
+        }
 
-.grid-cell {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    background-color: #eee;
-    border: 1px solid #ccc;
-}
+        .grid-cell {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            background-color: #eee;
+            border: 1px solid #ccc;
+            font-size: 1.5vmin;
+        }
 
-.grid-cell:hover {
-    background-color: #ddd;
-}
+        .grid-cell:hover {
+            background-color: #ddd;
+        }
 
-.water {
-    background-color: #00f;
-}
+        .water {
+            background-color: #00f;
+        }
 
-.farm {
-    background-color: #0f0;
-}
+        .farm {
+            background-color: #0f0;
+        }
 
-.factory {
-    background-color: #888;
-}
+        .factory {
+            background-color: #888;
+        }
 
-#controls {
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-    width: 100%; /* 确保按钮在较小屏幕上也能正确换行 */
-}
+        #controls {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
+            width: 100%;
+        }
 
-button {
-    padding: 10px;
-    margin: 5px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: white;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.3s;
-    flex: 1 1 calc(50% - 10px);
-}
+        button {
+            padding: 1vh;
+            border: none;
+            border-radius: 5px;
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+            font-size: 2vmin;
+            transition: background-color 0.3s;
+            flex: 1 1 calc(25% - 20px);
+            max-width: 120px;
+            box-sizing: border-box;
+        }
 
-button:hover {
-    background-color: #0056b3;
-}
+        button:hover {
+            background-color: #0056b3;
+        }
 
-#status {
-    margin-top: 20px;
-    font-size: 1.2rem;
-    text-align: left;
-    width: 100%;
-    max-width: 600px;
-}
+        #status {
+            margin-top: 10px;
+            font-size: 2vmin;
+            text-align: left;
+            width: 100%;
+            max-width: 600px;
+        }
 
-@media (min-width: 600px) {
-    button {
-        flex: 1 1 calc(33.33% - 10px); /* 在中等屏幕上，按钮分为三列 */
-    }
-}
+        @media (min-width: 1024px) {
+            h1 {
+                font-size: 3vh;
+            }
 
-@media (min-width: 768px) {
-    h1 {
-        font-size: 2.5rem;
-    }
+            button {
+                font-size: 1.5vmin;
+                padding: 1.5vh;
+            }
 
-    #status {
-        font-size: 1.5rem;
-    }
-
-    button {
-        font-size: 1.2rem;
-        flex: 1 1 calc(25% - 10px); /* 在大屏幕上，按钮分为四列 */
-    }
-}
-
-@media (min-width: 1024px) {
-    h1 {
-        font-size: 3rem;
-    }
-
-    #status {
-        font-size: 1.8rem;
-    }
-
-    button {
-        font-size: 1.4rem;
-    }
-}
+            #status {
+                font-size: 1.8vmin;
+            }
+        }
     </style>
 </head>
 <body>
@@ -162,179 +146,179 @@ button:hover {
     </div>
     <script>
         const BOARD_SIZE = 11;
-const WATER_CELLS = [
-    [4, 4], [4, 5], [4, 6],
-    [5, 4], [5, 5], [5, 6],
-    [6, 4], [6, 5], [6, 6]
-];
-let players = ['農夫', '資本家', '政府'];
-let currentPlayerIndex = 0;
-let currentSelection = null;
-let gameBoard = [];
-let canReset = true;
-let movesLeft = 3;
+        const WATER_CELLS = [
+            [4, 4], [4, 5], [4, 6],
+            [5, 4], [5, 5], [5, 6],
+            [6, 4], [6, 5], [6, 6]
+        ];
+        let players = ['農夫', '資本家', '政府'];
+        let currentPlayerIndex = 0;
+        let currentSelection = null;
+        let gameBoard = [];
+        let canReset = true;
+        let movesLeft = 3;
 
-// 初始化遊戲板
-function initializeBoard() {
-    const gameBoardElement = document.getElementById('game-board');
-    gameBoardElement.innerHTML = '';
-    gameBoard = [];
+        // 初始化遊戲板
+        function initializeBoard() {
+            const gameBoardElement = document.getElementById('game-board');
+            gameBoardElement.innerHTML = '';
+            gameBoard = [];
 
-    for (let row = 0; row < BOARD_SIZE; row++) {
-        const rowArray = [];
-        for (let col = 0; col < BOARD_SIZE; col++) {
-            const cell = document.createElement('div');
-            cell.classList.add('grid-cell');
-            cell.dataset.row = row;
-            cell.dataset.col = col;
+            for (let row = 0; row < BOARD_SIZE; row++) {
+                const rowArray = [];
+                for (let col = 0; col < BOARD_SIZE; col++) {
+                    const cell = document.createElement('div');
+                    cell.classList.add('grid-cell');
+                    cell.dataset.row = row;
+                    cell.dataset.col = col;
 
-            if (isWaterCell(row, col)) {
-                cell.classList.add('water');
-                rowArray.push('water');
-            } else {
-                rowArray.push(null);
+                    if (isWaterCell(row, col)) {
+                        cell.classList.add('water');
+                        rowArray.push('water');
+                    } else {
+                        rowArray.push(null);
+                    }
+
+                    cell.addEventListener('click', () => handleCellClick(row, col));
+                    gameBoardElement.appendChild(cell);
+                }
+                gameBoard.push(rowArray);
             }
 
-            cell.addEventListener('click', () => handleCellClick(row, col));
-            gameBoardElement.appendChild(cell);
+            updateStatus();
         }
-        gameBoard.push(rowArray);
-    }
 
-    updateStatus();
-}
-
-// 檢查是否是水源格子
-function isWaterCell(row, col) {
-    return WATER_CELLS.some(cell => cell[0] === row && cell[1] === col);
-}
-
-// 處理格子點擊事件
-function handleCellClick(row, col) {
-    if (movesLeft === 0 || currentSelection === null) return;
-
-    const cell = gameBoard[row][col];
-
-    if (currentSelection === 'reset') {
-        if (!canReset || cell === null || isWaterCell(row, col)) return;
-        resetLand(row, col);
-    } else {
-        if (cell !== null || !isAdjacentToDevelopedLand(row, col)) return;
-        if (currentSelection === 'farm') {
-            placeFarm(row, col);
-        } else if (currentSelection === 'factory') {
-            placeFactory(row, col);
-        } else if (currentSelection === 'water') {
-            placeWater(row, col);
+        // 檢查是否是水源格子
+        function isWaterCell(row, col) {
+            return WATER_CELLS.some(cell => cell[0] === row && cell[1] === col);
         }
-    }
 
-    movesLeft--;
-    updateStatus();
+        // 處理格子點擊事件
+        function handleCellClick(row, col) {
+            if (movesLeft === 0 || currentSelection === null) return;
 
-    if (movesLeft === 0) {
-        switchPlayer();
-    }
-}
+            const cell = gameBoard[row][col];
 
-// 檢查是否相鄰已開發的土地
-function isAdjacentToDevelopedLand(row, col) {
-    const adjacentOffsets = [
-        [-1, 0], [1, 0], [0, -1], [0, 1]
-    ];
+            if (currentSelection === 'reset') {
+                if (!canReset || cell === null || isWaterCell(row, col)) return;
+                resetLand(row, col);
+            } else {
+                if (cell !== null || !isAdjacentToDevelopedLand(row, col)) return;
+                if (currentSelection === 'farm') {
+                    placeFarm(row, col);
+                } else if (currentSelection === 'factory') {
+                    placeFactory(row, col);
+                } else if (currentSelection === 'water') {
+                    placeWater(row, col);
+                }
+            }
 
-    return adjacentOffsets.some(([dx, dy]) => {
-        const newRow = row + dx;
-        const newCol = col + dy;
-        return (
-            newRow >= 0 && newRow < BOARD_SIZE &&
-            newCol >= 0 && newCol < BOARD_SIZE &&
-            gameBoard[newRow][newCol] !== null
-        );
-    });
-}
+            movesLeft--;
+            updateStatus();
 
-// 放置農田
-function placeFarm(row, col) {
-    const cell = document.querySelector(`[data-row="${row}"][data-col="${col}"]`);
-    cell.classList.add('farm');
-    gameBoard[row][col] = 'farm';
-}
+            if (movesLeft === 0) {
+                switchPlayer();
+            }
+        }
 
-// 放置工廠
-function placeFactory(row, col) {
-    const cell = document.querySelector(`[data-row="${row}"][data-col="${col}"]`);
-    cell.classList.add('factory');
-    gameBoard[row][col] = 'factory';
-}
+        // 檢查是否相鄰已開發的土地
+        function isAdjacentToDevelopedLand(row, col) {
+            const adjacentOffsets = [
+                [-1, 0], [1, 0], [0, -1], [0, 1]
+            ];
 
-// 放置水
-function placeWater(row, col) {
-    const cell = document.querySelector(`[data-row="${row}"][data-col="${col}"]`);
-    cell.classList.add('water');
-    gameBoard[row][col] = 'water';
-}
+            return adjacentOffsets.some(([dx, dy]) => {
+                const newRow = row + dx;
+                const newCol = col + dy;
+                return (
+                    newRow >= 0 && newRow < BOARD_SIZE &&
+                    newCol >= 0 && newCol < BOARD_SIZE &&
+                    gameBoard[newRow][newCol] !== null
+                );
+            });
+        }
 
-// 恢復土地
-function resetLand(row, col) {
-    if (!canReset || gameBoard[row][col] === null || isWaterCell(row, col)) return;
+        // 放置農田
+        function placeFarm(row, col) {
+            const cell = document.querySelector(`[data-row="${row}"][data-col="${col}"]`);
+            cell.classList.add('farm');
+            gameBoard[row][col] = 'farm';
+        }
 
-    const cell = document.querySelector(`[data-row="${row}"][data-col="${col}"]`);
-    cell.classList.remove('farm', 'factory', 'water');
-    gameBoard[row][col] = null;
-    canReset = false;
-    document.getElementById('reset-btn').style.display = 'none';
-    currentSelection = null;
-    updateStatus();
-}
+        // 放置工廠
+        function placeFactory(row, col) {
+            const cell = document.querySelector(`[data-row="${row}"][data-col="${col}"]`);
+            cell.classList.add('factory');
+            gameBoard[row][col] = 'factory';
+        }
 
-// 切換玩家
-function switchPlayer() {
-    movesLeft = 3;
-    currentPlayerIndex = (currentPlayerIndex + 1) % players.length;
-    currentSelection = null;
-    alert(`現在輪到 ${players[currentPlayerIndex]} 操作`);
-    updateStatus();
-}
+        // 放置水
+        function placeWater(row, col) {
+            const cell = document.querySelector(`[data-row="${row}"][data-col="${col}"]`);
+            cell.classList.add('water');
+            gameBoard[row][col] = 'water';
+        }
 
-// 更新狀態信息
-function updateStatus() {
-    document.getElementById('current-player').textContent = players[currentPlayerIndex];
-    document.getElementById('current-selection').textContent = currentSelection || '無';
-    document.getElementById('message').textContent = `剩餘行動次數: ${movesLeft}`;
+        // 恢復土地
+        function resetLand(row, col) {
+            if (!canReset || gameBoard[row][col] === null || isWaterCell(row, col)) return;
 
-    if (players[currentPlayerIndex] === '政府' && canReset) {
-        document.getElementById('reset-btn').style.display = 'inline-block';
-    } else {
-        document.getElementById('reset-btn').style.display = 'none';
-    }
-}
+            const cell = document.querySelector(`[data-row="${row}"][data-col="${col}"]`);
+            cell.classList.remove('farm', 'factory', 'water');
+            gameBoard[row][col] = null;
+            canReset = false;
+            document.getElementById('reset-btn').style.display = 'none';
+            currentSelection = null;
+            updateStatus();
+        }
 
-// 結束遊戲
-function endGame() {
-    alert(`遊戲結束！請玩家計算有效農田和有效工廠數。`);
-}
+        // 切換玩家
+        function switchPlayer() {
+            movesLeft = 3;
+            currentPlayerIndex = (currentPlayerIndex + 1) % players.length;
+            currentSelection = null;
+            alert(`現在輪到 ${players[currentPlayerIndex]} 操作`);
+            updateStatus();
+        }
 
-// 初始化
-document.getElementById('water-btn').addEventListener('click', () => {
-    currentSelection = 'water';
-    updateStatus();
-});
-document.getElementById('farm-btn').addEventListener('click', () => {
-    currentSelection = 'farm';
-    updateStatus();
-});
-document.getElementById('factory-btn').addEventListener('click', () => {
-    currentSelection = 'factory';
-    updateStatus();
-});
-document.getElementById('reset-btn').addEventListener('click', () => {
-    currentSelection = 'reset';
-    updateStatus();
-});
-document.getElementById('end-game-btn').addEventListener('click', endGame);
+        // 更新狀態信息
+        function updateStatus() {
+            document.getElementById('current-player').textContent = players[currentPlayerIndex];
+            document.getElementById('current-selection').textContent = currentSelection || '無';
+            document.getElementById('message').textContent = `剩餘行動次數: ${movesLeft}`;
 
-initializeBoard();
+            if (players[currentPlayerIndex] === '政府' && canReset) {
+                document.getElementById('reset-btn').style.display = 'inline-block';
+            } else {
+                document.getElementById('reset-btn').style.display = 'none';
+            }
+        }
+
+        // 結束遊戲
+        function endGame() {
+            alert(`遊戲結束！請玩家計算有效農田和有效工廠數。`);
+        }
+
+        // 初始化
+        document.getElementById('water-btn').addEventListener('click', () => {
+            currentSelection = 'water';
+            updateStatus();
+        });
+        document.getElementById('farm-btn').addEventListener('click', () => {
+            currentSelection = 'farm';
+            updateStatus();
+        });
+        document.getElementById('factory-btn').addEventListener('click', () => {
+            currentSelection = 'factory';
+            updateStatus();
+        });
+        document.getElementById('reset-btn').addEventListener('click', () => {
+            currentSelection = 'reset';
+            updateStatus();
+        });
+        document.getElementById('end-game-btn').addEventListener('click', endGame);
+
+        initializeBoard();
     </script>
 </body>
 </html>
