--- a/WGH.html
+++ b/WGH.html
@@ -69,53 +69,152 @@
 
 <body>
   <div align="center">
-    <h2>水產氫氣IoT裝置</h2>
+  <h2 style="color:blue;">空氣取水IoT系統</h2>
   </div>
 
   <div align="center" id="startButton">
-    <button id="sendBtn" onclick="send()">開始運行</button><br><br>
+  <button id="sendBtn" onclick="send()">開始運行</button><br><br>
   </div>
 
-  <div align="center" id="nowState" style="display: none;">
-    <h3>裝置狀態</h3>
-    <p style="display:inline;" id="dhtData">溫度:, 溼度:</p> <br>
+
+  <div align="center" id="nowState"style="display: none;">
+  <h3 >裝置狀態</h3>
+  <p style="display:inline;"id="dhtData">溫度:, 溼度:</p> <br>
+  <h3 id="stateName" style="color:red;"></h3>
+  <h6 id="explain" style="color:gray;">智能模式下<br>致冷晶片於濕度高於40%啟動<br>進氣風扇於溫度高於15°C啟動</h6>
+  <p style="display:inline;" id="fanState">進氣風扇:</p><button id="fanButton" style="display:inline;" >off</button>
+  <br>
+  <p style="display:inline;" id="coldState">致冷晶片:</p><button id="coldButton" style="display:inline;">off</button>
   </div>
   <br>
+
+  <div align="center" id="manualControl" style="display: none;">
+
+  <button id="sendBtn" onclick="send()">切換手動模式</button><br>
+  </div>
+  
+  <div align="center" id="autoControl" style="display: none;">
+  <button id="sendBtn" onclick="send()">切換智能模式</button><br>
+  </div>
+
 </body>
 
 <script>
-  var batteryrelay;
-  var waterrelay;
+var fanrelay;
+var coldrelay;
+var smartMode=false;
 
-  function send() {
-    document.getElementById("nowState").style.display = "block";
-    document.getElementById("startButton").style.display = "none";
+function send() {
 
-    boardReady({ board: 'Smart', device: '10dgEbKV', transport: 'mqtt', multi: true }, function (board) {
-      board.samplingInterval = 50;
-      batteryrelay = getLed(board, 16);
-      waterrelay = getLed(board, 14);
-      dht = getDht(board, 2);
-      batteryrelay.off();
-      waterrelay.off();
+document.getElementById('fanButton').innerHTML="off"
+document.getElementById('coldButton').innerHTML="off"
 
-      dht.read(function (evt) {
-        document.getElementById('dhtData').innerHTML = (['溫度:', dht.temperature, '°C,', '溼度:', dht.humidity, '%'].join(''));
-        batteryrelay.on();
+boardReady({board: 'Smart', device: '10QRRggQ', transport: 'mqtt', multi: true}, function (board) {
+  board.samplingInterval = 50;
+  fanrelay = getLed(board, 16);
+  coldrelay = getLed(board, 14);
+  dht = getDht(board, 2);
+  fanrelay.on();
+  coldrelay.on();
 
-        function cycleWaterRelay() {
-          waterrelay.on();
-          setTimeout(function () {
-            waterrelay.off();
-          }, 5000); // 開啟5秒
-        }
 
-        // 開始循環
-        cycleWaterRelay();
-        setInterval(cycleWaterRelay, 15000); // 每15秒循環一次 (5秒開啟 + 10秒關閉)
-      }, 1000);
-    });
+  dht.read(function(evt){
+    document.getElementById('dhtData').innerHTML = (['溫度:',dht.temperature,'°C,','溼度:',dht.humidity,'%'].join(''));
+
+
+if(smartMode){
+
+  if(dht.humidity>40&&dht.temperature<15){
+    fanrelay.on();
+    coldrelay.off();
+    document.getElementById('fanState').innerHTML="進氣風扇:off";
+    document.getElementById('coldState').innerHTML="致冷晶片:on";
+
+
+  }else if(dht.humidity>40&&dht.temperature>=15){
+
+    fanrelay.off();
+    coldrelay.off();
+    document.getElementById('fanState').innerHTML="進氣風扇:on";
+    document.getElementById('coldState').innerHTML="致冷晶片:on";
+
+  }else if(dht.humidity<=40){
+
+    fanrelay.off();
+    coldrelay.on();
+    document.getElementById('fanState').innerHTML="進氣風扇:on";
+    document.getElementById('coldState').innerHTML="致冷晶片:off";
+
+
+  }else{
+    fanrelay.on();
+    coldrelay.on();
+    document.getElementById('fanState').innerHTML="進氣風扇:off";
+    document.getElementById('coldState').innerHTML="致冷晶片:off";
   }
-</script>
 
+}
+
+
+  }, 1000);
+
+  document.getElementById('fanButton').addEventListener('click',function () {
+    fanrelay.toggle();
+    if(document.getElementById('fanButton').innerHTML=="off"){
+      document.getElementById('fanButton').innerHTML="on";
+    }else{
+      document.getElementById('fanButton').innerHTML="off";
+    }
+ 
+  });
+  document.getElementById('coldButton').addEventListener('click',function () {
+    coldrelay.toggle();
+     if(document.getElementById('coldButton').innerHTML=="off"){
+      document.getElementById('coldButton').innerHTML="on";
+    }else{
+      document.getElementById('coldButton').innerHTML="off";
+    }
+ 
+  });
+
+
+
+
+
+});
+  document.getElementById("nowState").style.display="block";
+ 
+  document.getElementById("startButton").style.display="none";
+
+  if(document.getElementById('stateName').innerHTML=="手動模式"){
+    document.getElementById('stateName').innerHTML="智能模式";
+    document.getElementById('fanState').innerHTML="進氣風扇:on";
+    document.getElementById('coldState').innerHTML="致冷晶片:on";
+    document.getElementById("fanButton").style.visibility="hidden";
+    document.getElementById("coldButton").style.visibility="hidden";
+    document.getElementById("manualControl").style.display="block";
+    document.getElementById("autoControl").style.display="none";
+    document.getElementById("explain").style.display="block";
+
+  
+    smartMode=true;
+   
+    
+
+  }else{
+    document.getElementById('stateName').innerHTML="手動模式";
+    document.getElementById('fanState').innerHTML="進氣風扇:";
+    document.getElementById('coldState').innerHTML="致冷晶片:";
+    document.getElementById("fanButton").style.visibility="visible";
+    document.getElementById("coldButton").style.visibility="visible";
+    document.getElementById("autoControl").style.display="block";
+    document.getElementById("manualControl").style.display="none";
+    document.getElementById("explain").style.display="none";
+
+
+   smartMode=false;
+  }
+}
+</script>
+</body>
 </html>
