--- a/WGH.html
+++ b/WGH.html
@@ -112,7 +112,7 @@
 
     document.getElementById('stateName').innerHTML="手動模式";
 
-boardReady({board: 'Smart', device: '10dgEbKV', transport: 'mqtt'}, function (board) {
+boardReady({board: 'Smart', device: '10QMXm7V', transport: 'mqtt'}, function (board) {
   board.samplingInterval = 50;
   led = getLed(board, 0);
   document.getElementById('pumbrelay').addEventListener('click',function () {
