--- a/WGH.html
+++ b/WGH.html
@@ -117,6 +117,11 @@ boardReady({board: 'Smart', device: '10QMXm7V', transport: 'mqtt'}, function (bo
   board.samplingInterval = 50;
   pumprelay = getLed(board, 4);
   document.getElementById('pumpButton').addEventListener('click',function () {
+    if(document.getElementById('pumpButton').innerHTML=="off"){
+      document.getElementById('pumpButton').innerHTML="on"
+    }else if{
+      document.getElementById('pumpButton').innerHTML="off"
+    }
     pumprelay.toggle();
   });
 });
