--- a/WGH.html
+++ b/WGH.html
@@ -1,3 +1,6 @@
+<!doctype html>
+<html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -118,6 +121,12 @@
     document.getElementById("autoControl").style.display = "none";
     document.getElementById("manualControl").style.display = "block";
     document.getElementById('stateName').innerHTML = "智能模式";
+
+    // 确保pumprelay是开启状态
+    if (document.getElementById('pumpButton').innerHTML == "off") {
+      document.getElementById('pumpButton').innerHTML = "on";
+      pumprelay.on();
+    }
 
     autoModeInterval = setInterval(function() {
       pumprelay.toggle();
