--- a/physics/photoelectricEffect.html
+++ b/physics/photoelectricEffect.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLIL Teaching - Photoelectric Effect Unit</title>
+    <title>CLIL Teaching - Photoelectric Effect</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -100,7 +100,7 @@
 </head>
 <body>
     <div class="slide active" id="cover-slide">
-        <h1>CLIL Teaching - Photoelectric Effect Unit</h1>
+        <h1>CLIL Teaching - Photoelectric Effect</h1>
         <p>Exploring the Fundamentals of the Photoelectric Effect</p>
     </div>
 
@@ -185,7 +185,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 CLIL Teaching - Photoelectric Effect Unit</p>
+        <p>&copy; Guidephy&CLIL Teaching - Photoelectric Effect</p>
     </footer>
 
     <script>
