--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
-        <li><a href="https://guidephy.github.io/physics/photoelectricEffect.html">光電效應CLIL</a></li>
+        <li><a href="https://www.canva.com/design/DAGKjmCjtFk/GZCBMx5sWCv2i2rp7Uwo3w/view?utm_content=DAGKjmCjtFk&utm_campaign=designshare&utm_medium=link&utm_source=editor">紙杯射門員</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
