--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
          <li><a href="program.html">程式語言</a></li>
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
-        <li><a href="https://www.canva.com/design/DAGKjmCjtFk/GZCBMx5sWCv2i2rp7Uwo3w/view?utm_content=DAGKjmCjtFk&utm_campaign=designshare&utm_medium=link&utm_source=editor">紙杯射門員</a></li>
+        <li><a href="https://drive.google.com/drive/folders/1CLp5TplsPyamIveePaoE0OGeD8pcKYU0?usp=sharing">暑輔學測複習題目</a></li>
       </ul>
 
       <h3 class="sub-title">About Me</h3>
