--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                   <a href="LineBot.html">LineBot</a>
                   <a href="VPython.html">VPython</a>
                   <a href="Ohtaigi.html">台語課程</a>
+                   <a href="https://docs.google.com/spreadsheets/d/1adYmoDDCEJAAgI8JGgfVuwJH1kd4ZQtOGNRhE7E2y8w/edit?usp=sharing">暑輔用連結</a>
               </div>
           </li>
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
