--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@
          <li><a href="exp.html">科學實驗</a></li>
          <li><a href="https://books.i-yuida.com.tw/">台語電子書</a></li>
          <li><a href="https://drive.google.com/drive/folders/1CLp5TplsPyamIveePaoE0OGeD8pcKYU0?usp=sharing">暑輔學測複習題目</a></li>
+         <li><a href="https://forms.gle/NV2rYXtYEa85yEvX7">高一化工物理考試</a></li>
+       
       </ul>
 
       <h3 class="sub-title">About Me</h3>
