--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                   <a href="phyhistorytest.html">物理史小測驗</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
                   <a href="Ttest.html">國中技藝競賽題庫</a>
+                <a href="https://forms.gle/YGRKsFVZ4HphQ4SU6">化工物理重補修</a>
               </div>
 
           </li>
