--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
           <li class="dropdown"><a href="javascript:void(0)" class="dropbtn" onclick="myFunction2()">線上題庫</a>
               <div class="dropdown-content" id="myDropdown2">
                   <a href="phyhistorytest.html">物理史小測驗</a>
+                  <a href="Competency.html">高中物理素養題</a>
                   <a href="https://guidephy.github.io/taigitest.html">台羅拼音聽力測驗</a>
                   <a href="Ttest.html">國中技藝競賽題庫</a>
-                <a href="https://forms.gle/YGRKsFVZ4HphQ4SU6">化工物理重補修</a>
+               
               </div>
 
           </li>
